--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "howler": "^2.0.15",
+    "material-ui": "^0.20.2",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-live-clock": "^2.0.3",
     "react-scripts": "2.0.5"
   },
   "scripts": {
